pi-parser/test-data/snapshots/pi_parser__tests__parse_basic_literals_b10_int_neg.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  IntLit:
    negative:
      node: true
      span:
        range:
          start: 0
          end: 1
        file_id: 0
    signed: true
    bits: 32
    val:
      node: 10
      span:
        range:
          start: 1
          end: 3
        file_id: 0
span:
  range:
    start: 0
    end: 3
  file_id: 0

