pi-parser/test-data/snapshots/pi_parser__tests__parse_basic_literals_b16_int_sep.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  IntLit:
    negative:
      node: false
      span:
        range:
          start: 0
          end: 1
        file_id: 0
    signed: true
    bits: 32
    val:
      node: 44031
      span:
        range:
          start: 0
          end: 8
        file_id: 0
span:
  range:
    start: 0
    end: 8
  file_id: 0

